--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -13,7 +13,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Check out
+      - name: Checkout
         uses: actions/checkout@v2
 
       # Korak za instalaciju docker-compose
@@ -24,7 +24,6 @@ jobs:
           docker-compose --version  # Ovaj korak proverava da li je instalacija uspela
 
       - name: Test
-        run: docker-compose run --rm app sh -c "python manage.py test"
-
+        run: docker-compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
       - name: Lint
         run: docker-compose run --rm app sh -c "flake8"
